--- a/Ordital/Base.lproj/Main.storyboard
+++ b/Ordital/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -2542,13 +2542,22 @@
                                                 <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7MB-f2-UVR">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" tag="101" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greenTick.png" translatesAutoresizingMaskIntoConstraints="NO" id="ns9-NP-ZRy">
+                                                    <rect key="frame" x="106" y="106" width="36" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="36" id="3JD-TO-9PJ"/>
+                                                        <constraint firstAttribute="width" constant="36" id="mk7-1x-zoq"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
                                             <constraint firstItem="7MB-f2-UVR" firstAttribute="top" secondItem="TXy-O6-Jle" secondAttribute="top" id="1wv-vj-bYE"/>
+                                            <constraint firstItem="ns9-NP-ZRy" firstAttribute="trailing" secondItem="TXy-O6-Jle" secondAttribute="trailingMargin" id="Fkq-Lh-dc6"/>
                                             <constraint firstAttribute="bottom" secondItem="7MB-f2-UVR" secondAttribute="bottom" id="W9P-mV-gEo"/>
                                             <constraint firstAttribute="trailing" secondItem="7MB-f2-UVR" secondAttribute="trailing" id="Ygw-9F-8Ta"/>
+                                            <constraint firstItem="ns9-NP-ZRy" firstAttribute="bottom" secondItem="TXy-O6-Jle" secondAttribute="bottomMargin" id="wNr-EE-vda"/>
                                             <constraint firstItem="7MB-f2-UVR" firstAttribute="leading" secondItem="TXy-O6-Jle" secondAttribute="leading" id="x2F-8e-NBo"/>
                                         </constraints>
                                         <size key="customSize" width="150" height="150"/>
@@ -2610,6 +2619,7 @@
                     <navigationItem key="navigationItem" title="Pending Images" id="Itq-nh-C4z"/>
                     <connections>
                         <outlet property="auditCollectionView" destination="oXy-oJ-Ngc" id="Nd5-hU-DbL"/>
+                        <segue destination="BxC-pg-ihm" kind="push" identifier="showFullScreenView" id="Wd1-aa-LNS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jhr-C0-mXu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3970,7 +3980,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pe1-fw-qQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3640" y="1010"/>
+            <point key="canvasLocation" x="3658" y="1054"/>
         </scene>
         <!--Add Audit-->
         <scene sceneID="LdA-a8-vJk">
@@ -4341,6 +4351,66 @@
             </objects>
             <point key="canvasLocation" x="128" y="1468"/>
         </scene>
+        <!--Pending Audit Full Screen View Controller-->
+        <scene sceneID="4o1-58-kVP">
+            <objects>
+                <viewController id="BxC-pg-ihm" customClass="PendingAuditFullScreenViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g28-CY-mrI"/>
+                        <viewControllerLayoutGuide type="bottom" id="EYo-H6-IyD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xJI-bO-DFT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAN-I9-MLy">
+                                <rect key="frame" x="-4" y="69" width="328" height="360"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BxC-pg-ihm" id="AwL-qL-PJp"/>
+                                </connections>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="wd5-NF-AMF">
+                                <rect key="frame" x="20" y="423" width="280" height="37"/>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDC-Yy-NOs">
+                                <rect key="frame" x="113" y="450" width="94" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="LYZ-Td-R8W"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Upload Audit">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteButtonTapped:" destination="BxC-pg-ihm" eventType="touchUpInside" id="xCz-Or-KLS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bDC-Yy-NOs" firstAttribute="centerX" secondItem="wd5-NF-AMF" secondAttribute="centerX" id="0te-lZ-q9N"/>
+                            <constraint firstAttribute="trailing" secondItem="wd5-NF-AMF" secondAttribute="trailing" constant="20" symbolic="YES" id="20Z-47-afd"/>
+                            <constraint firstAttribute="bottom" secondItem="bDC-Yy-NOs" secondAttribute="bottom" id="8Lg-Vj-pU7"/>
+                            <constraint firstAttribute="bottom" secondItem="wd5-NF-AMF" secondAttribute="bottom" constant="20" symbolic="YES" id="9SX-T7-0wE"/>
+                            <constraint firstItem="cAN-I9-MLy" firstAttribute="top" secondItem="g28-CY-mrI" secondAttribute="bottom" constant="49" id="Jym-vM-qtf"/>
+                            <constraint firstItem="cAN-I9-MLy" firstAttribute="leading" secondItem="xJI-bO-DFT" secondAttribute="leadingMargin" constant="-20" id="LKM-b4-Clx"/>
+                            <constraint firstAttribute="bottom" secondItem="cAN-I9-MLy" secondAttribute="bottom" constant="51" id="Nix-KV-XJt"/>
+                            <constraint firstItem="bDC-Yy-NOs" firstAttribute="top" secondItem="cAN-I9-MLy" secondAttribute="bottom" constant="21" id="O4W-oA-2Y2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cAN-I9-MLy" secondAttribute="trailing" constant="-20" id="Rx4-yK-5bE"/>
+                            <constraint firstItem="wd5-NF-AMF" firstAttribute="leading" secondItem="xJI-bO-DFT" secondAttribute="leading" constant="20" symbolic="YES" id="sRS-5t-JPs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="n3d-2r-w0M"/>
+                    <connections>
+                        <outlet property="auditPageControl" destination="wd5-NF-AMF" id="2oC-eP-cYD"/>
+                        <outlet property="auditScrollView" destination="cAN-I9-MLy" id="wfx-7Y-apR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WBK-Qk-92s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1663" y="-1357"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AppIconAboutUs" width="120" height="120"/>
@@ -4360,6 +4430,7 @@
         <image name="downlaods-icon.png" width="23" height="23"/>
         <image name="equipment-tab.png" width="294" height="120"/>
         <image name="find-tab.png" width="592" height="243"/>
+        <image name="greenTick.png" width="128" height="121"/>
         <image name="list-tab.png" width="592" height="245"/>
         <image name="lists-icon-selected.png" width="21" height="21"/>
         <image name="logo.png" width="105" height="28"/>
