--- a/Ordital/Base.lproj/Main.storyboard
+++ b/Ordital/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -2086,102 +2086,6 @@
             </objects>
             <point key="canvasLocation" x="1586" y="1876"/>
         </scene>
-        <!--Upload Info-->
-        <scene sceneID="5VS-K3-R14">
-            <objects>
-                <viewController id="p9z-Xu-L5u" customClass="UploadInfoViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="vAy-cT-x69"/>
-                        <viewControllerLayoutGuide type="bottom" id="q0K-si-Vbx"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="bF9-jL-AVE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assets to be uploaded" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEs-oZ-Ih7">
-                                <rect key="frame" x="20" y="100" width="173" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="vOr-EA-ZkT"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audit Images to be uploaded" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJK-Wf-w8U">
-                                <rect key="frame" x="20" y="139" width="222" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="nYJ-HG-CIr"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jsd-6b-pkd">
-                                <rect key="frame" x="258" y="100" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="Mg5-FM-w8n"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mSH-9D-ciS">
-                                <rect key="frame" x="258" y="139" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="1qQ-GB-OAw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6S-Nz-3vR">
-                                <rect key="frame" x="66" y="277" width="188" height="30"/>
-                                <state key="normal" title="View Pending Audit Images">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="6hq-SJ-z1q" kind="push" id="ScI-cZ-1BO"/>
-                                </connections>
-                            </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iS6-Eu-PGO">
-                                <rect key="frame" x="27" y="315" width="266" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="266" id="6uT-Ut-92X"/>
-                                    <constraint firstAttribute="height" constant="30" id="tQx-w7-hLJ"/>
-                                </constraints>
-                                <state key="normal" title="Save Audit Images in Photo Library">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="jsd-6b-pkd" firstAttribute="leading" secondItem="GEs-oZ-Ih7" secondAttribute="trailing" constant="65" id="0gV-8n-DwH"/>
-                            <constraint firstItem="jsd-6b-pkd" firstAttribute="top" secondItem="GEs-oZ-Ih7" secondAttribute="top" id="2JK-Ef-Xq1"/>
-                            <constraint firstAttribute="centerX" secondItem="iS6-Eu-PGO" secondAttribute="centerX" id="7JH-kC-xhk"/>
-                            <constraint firstItem="GEs-oZ-Ih7" firstAttribute="baseline" secondItem="jsd-6b-pkd" secondAttribute="baseline" id="EZg-N9-3Gn"/>
-                            <constraint firstItem="xJK-Wf-w8U" firstAttribute="top" secondItem="mSH-9D-ciS" secondAttribute="top" id="Jhc-pO-BpE"/>
-                            <constraint firstItem="iS6-Eu-PGO" firstAttribute="top" secondItem="g6S-Nz-3vR" secondAttribute="bottom" constant="8" id="OVS-JF-tWC"/>
-                            <constraint firstAttribute="trailing" secondItem="jsd-6b-pkd" secondAttribute="trailing" constant="20" symbolic="YES" id="RHy-yh-4Rv"/>
-                            <constraint firstItem="GEs-oZ-Ih7" firstAttribute="top" secondItem="vAy-cT-x69" secondAttribute="bottom" constant="80" id="UbY-Ak-Xdp"/>
-                            <constraint firstItem="g6S-Nz-3vR" firstAttribute="leading" secondItem="bF9-jL-AVE" secondAttribute="leading" constant="66" id="WTW-W3-fFL"/>
-                            <constraint firstItem="GEs-oZ-Ih7" firstAttribute="leading" secondItem="bF9-jL-AVE" secondAttribute="leading" constant="20" symbolic="YES" id="Yc2-P0-RHf"/>
-                            <constraint firstItem="xJK-Wf-w8U" firstAttribute="top" secondItem="GEs-oZ-Ih7" secondAttribute="bottom" constant="18" id="bam-WZ-JUZ"/>
-                            <constraint firstAttribute="bottom" secondItem="g6S-Nz-3vR" secondAttribute="bottom" constant="173" id="br9-TV-D5E"/>
-                            <constraint firstItem="mSH-9D-ciS" firstAttribute="leading" secondItem="jsd-6b-pkd" secondAttribute="leading" id="fVs-Kz-v2x"/>
-                            <constraint firstItem="mSH-9D-ciS" firstAttribute="leading" secondItem="xJK-Wf-w8U" secondAttribute="trailing" constant="16" id="iEi-UQ-CKI"/>
-                            <constraint firstItem="xJK-Wf-w8U" firstAttribute="leading" secondItem="GEs-oZ-Ih7" secondAttribute="leading" id="jDJ-fd-H6Y"/>
-                            <constraint firstItem="mSH-9D-ciS" firstAttribute="trailing" secondItem="jsd-6b-pkd" secondAttribute="trailing" id="nAe-1t-2or"/>
-                            <constraint firstItem="mSH-9D-ciS" firstAttribute="baseline" secondItem="xJK-Wf-w8U" secondAttribute="baseline" id="pag-59-o7V"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Upload Info" id="hAP-MZ-olg"/>
-                    <connections>
-                        <outlet property="assetCountLabel" destination="jsd-6b-pkd" id="FWA-kd-l6J"/>
-                        <outlet property="auditCountLabel" destination="mSH-9D-ciS" id="Kdo-oM-0Jw"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3kJ-1A-DAz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="605" y="-1352"/>
-        </scene>
         <!--Sync Update-->
         <scene sceneID="dkj-Do-b4c">
             <objects>
@@ -3569,7 +3473,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1qT-Tc-W4w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3026" y="482"/>
+            <point key="canvasLocation" x="3090" y="402"/>
         </scene>
         <!--Coding-->
         <scene sceneID="UPV-dH-6DW">
@@ -3872,7 +3776,7 @@
                                             <action selector="backButtonTapped:" destination="eRg-TT-uNs" eventType="touchUpInside" id="xtR-3G-Fvm"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Audits" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrF-uj-zQl">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Photos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrF-uj-zQl">
                                         <rect key="frame" x="8" y="36" width="304" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="unw-e2-STf"/>
@@ -3930,8 +3834,8 @@
                     <navigationItem key="navigationItem" id="9Om-L2-ygT"/>
                     <connections>
                         <outlet property="tblView" destination="JIz-ve-vKX" id="sk6-zE-cG2"/>
-                        <segue destination="DxC-tw-mW4" kind="push" identifier="scrollPushSegue" id="8Ly-4Q-VTI"/>
                         <segue destination="dw2-wk-hck" kind="push" identifier="addMoreAuditsSegue" id="w9O-ts-vfG"/>
+                        <segue destination="0O7-7a-CKX" kind="push" identifier="auditDetailSegue" id="eII-6q-PRz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jti-5u-p2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3947,20 +3851,20 @@
                         <viewControllerLayoutGuide type="bottom" id="CZz-oe-NJS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="euv-Ap-bnh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="550"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CWc-og-LTI">
-                                <rect key="frame" x="0.0" y="69" width="320" height="430"/>
+                                <rect key="frame" x="0.0" y="69" width="320" height="360"/>
                                 <connections>
                                     <outlet property="delegate" destination="DxC-tw-mW4" id="PXb-on-q4k"/>
                                 </connections>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="mTY-UI-NaX">
-                                <rect key="frame" x="20" y="493" width="280" height="37"/>
+                                <rect key="frame" x="20" y="423" width="280" height="37"/>
                             </pageControl>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3w-x7-uAa">
-                                <rect key="frame" x="113" y="520" width="94" height="30"/>
+                                <rect key="frame" x="113" y="450" width="94" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="94" id="PIp-Ag-yHy"/>
                                 </constraints>
@@ -3996,7 +3900,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pe1-fw-qQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3658" y="1054"/>
+            <point key="canvasLocation" x="3904" y="1048"/>
         </scene>
         <!--Add Audit-->
         <scene sceneID="LdA-a8-vJk">
@@ -4715,9 +4619,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Rjb-iL-kff"/>
-        <segue reference="Jsv-ZO-ejo"/>
         <segue reference="jkj-na-uQ1"/>
+        <segue reference="Rjb-iL-kff"/>
+        <segue reference="Vcf-8L-uwi"/>
         <segue reference="w9O-ts-vfG"/>
     </inferredMetricsTieBreakers>
 </document>
