2- "View Audit" screen only accessible from "SYNC QUEUE". CHANGE required to access this same screen from "ADD PHOTO" on "TODAY" and "DONE" in the LIST screens.For Example - When I select an asset from the SYNC queue and open up its asset detail screen, I can select "ADD PHOTO" and it will show me all photos that have been taken for that asset.Then from there I can ADD / DELETE more photos.BUT - if I open up the asset detail screen from the TODAY and DONE lists (ie. these are lists that have already had photos taken at some stage) and then press ADD PHOTO I don't get to see any existing photos (even if the photos are on the device). What I would like is that if its an asset on the TODAY or DONE list that when I hit ADD PHOTO it brings up the same screen as you get when you open up from the SYNC QUEUE.And in that case shows you the PHOTOS that have been taken against that asset already that are still on the DEVICE (if you have cleared the cache or purged then you can't see any photos - its only displaying those photos that remain on the local device).We can't delete photos from the DONE & TODAY list - only from the SYNC queue.So on TO-DO (the most common one) - it goes straight to the taking photos screen - everything else it goes to the View Audits screen - and if there are no photos on the local device then this is blank (no photos displaying). 4- This should be renamed "PHOTOS ON DEVICE from Pending Images in upload screen.The Purge Command will be moved to the current “EXPORT PHOTOS” command.Where you have EXPORT DATABASE now it should do several things 1) backup database to aws. 2) purge database on device (asset and audit table?). 3) Purge photo So all 3 things run from one command. See at the moment we can't purge database - only clear cache.So really about simply combining export database and purge photos into one command.This happens in background mode. 5- Change EXPORT DATABASE -     The current EXPORT DATABASE should be changed as follows:     a) Rename to

--- a/Ordital/Base.lproj/Main.storyboard
+++ b/Ordital/Base.lproj/Main.storyboard
@@ -2414,7 +2414,7 @@
             </objects>
             <point key="canvasLocation" x="1360" y="-40"/>
         </scene>
-        <!--Pending Images-->
+        <!--Photos On Device-->
         <scene sceneID="cgO-lf-TSf">
             <objects>
                 <viewController id="6hq-SJ-z1q" customClass="PreviewPendingAuditsViewController" sceneMemberID="viewController">
@@ -2488,7 +2488,7 @@
                                             <action selector="backButtonTapped:" destination="6hq-SJ-z1q" eventType="touchUpInside" id="UX5-hz-emA"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending Images" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76v-Sy-sY8">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos On Device" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76v-Sy-sY8">
                                         <rect key="frame" x="80" y="36" width="158" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="158" id="RNE-0U-8ln"/>
@@ -2536,7 +2536,7 @@
                             <constraint firstAttribute="trailing" secondItem="sln-nE-UqY" secondAttribute="trailing" id="y7I-Oi-cYg"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Pending Images" id="Itq-nh-C4z"/>
+                    <navigationItem key="navigationItem" title="Photos On Device" id="Itq-nh-C4z"/>
                     <connections>
                         <outlet property="auditCollectionView" destination="oXy-oJ-Ngc" id="Nd5-hU-DbL"/>
                         <segue destination="0O7-7a-CKX" kind="push" identifier="showAuditDetailSegue" id="Vcf-8L-uwi"/>
@@ -4619,9 +4619,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="jkj-na-uQ1"/>
         <segue reference="Rjb-iL-kff"/>
-        <segue reference="Vcf-8L-uwi"/>
+        <segue reference="NwR-xT-eUS"/>
         <segue reference="w9O-ts-vfG"/>
+        <segue reference="Vcf-8L-uwi"/>
     </inferredMetricsTieBreakers>
 </document>
