--- a/Ordital/Base.lproj/Main.storyboard
+++ b/Ordital/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="njz-dq-baR">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -876,6 +876,7 @@
                                     <constraint firstItem="abS-x2-AB8" firstAttribute="leading" secondItem="llj-xv-S8y" secondAttribute="leading" constant="16" id="Rmh-Do-MTO"/>
                                     <constraint firstItem="0xC-kw-shk" firstAttribute="leading" secondItem="llj-xv-S8y" secondAttribute="leading" constant="7" id="RsM-md-6Cg"/>
                                     <constraint firstItem="T40-Cq-Mmq" firstAttribute="top" secondItem="llj-xv-S8y" secondAttribute="top" constant="8" id="VAr-sa-MIW"/>
+                                    <constraint firstItem="O3N-Wd-wex" firstAttribute="centerX" secondItem="llj-xv-S8y" secondAttribute="centerX" id="VLa-3P-bFY"/>
                                     <constraint firstAttribute="trailing" secondItem="WW5-SB-qBP" secondAttribute="trailing" constant="16" id="VVP-vh-OV3"/>
                                     <constraint firstItem="cIu-G4-1Cv" firstAttribute="top" secondItem="6ZB-hg-yhZ" secondAttribute="bottom" constant="23" id="ZL9-wI-r0r"/>
                                     <constraint firstItem="xlW-Ka-RnJ" firstAttribute="leading" secondItem="llj-xv-S8y" secondAttribute="leading" constant="16" id="bBy-o9-tzg"/>
@@ -4446,7 +4447,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sna-k2-Ws2">
-                                <rect key="frame" x="7" y="435" width="306" height="45"/>
+                                <rect key="frame" x="7" y="427" width="306" height="45"/>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.34509803921568627" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="qWO-7Q-4Mg"/>
@@ -4487,7 +4488,7 @@
                             <constraint firstItem="C6d-Ok-hcT" firstAttribute="top" secondItem="4CI-4X-WhP" secondAttribute="bottom" constant="8" id="j3Y-06-TAC"/>
                             <constraint firstItem="Sna-k2-Ws2" firstAttribute="leading" secondItem="Ax8-Xi-lFr" secondAttribute="leading" constant="7" id="jNl-wG-ZW3"/>
                             <constraint firstItem="9Yo-qO-MYm" firstAttribute="top" secondItem="C6d-Ok-hcT" secondAttribute="bottom" constant="8" id="nlJ-ea-KdW"/>
-                            <constraint firstItem="knj-Bm-Xxf" firstAttribute="top" secondItem="Sna-k2-Ws2" secondAttribute="bottom" id="oVG-2V-SYX"/>
+                            <constraint firstItem="knj-Bm-Xxf" firstAttribute="top" secondItem="Sna-k2-Ws2" secondAttribute="bottom" constant="8" id="oVG-2V-SYX"/>
                             <constraint firstItem="0hi-Rn-lla" firstAttribute="leading" secondItem="Ax8-Xi-lFr" secondAttribute="leading" constant="35" id="qdO-PI-ScT"/>
                             <constraint firstItem="C6d-Ok-hcT" firstAttribute="leading" secondItem="Ax8-Xi-lFr" secondAttribute="leading" constant="35" id="sLW-9S-9H6"/>
                             <constraint firstItem="mGN-dY-lIW" firstAttribute="centerX" secondItem="Ax8-Xi-lFr" secondAttribute="centerX" id="tx5-GZ-zNV"/>
